--- a/lesson9/css/prophets.css
+++ b/lesson9/css/prophets.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
+
 body {
     font-size: 16px;
     font-family: Poppins, Arial, Helvetica, sans-serif;
@@ -9,6 +10,11 @@ main,
 footer {
     margin: 1rem;
     position: relative;
+}
+
+header {
+    text-align: right;
+    margin-left: 150px;
 }
 
 h1 {
@@ -56,7 +62,8 @@ section {
 }
 
 section>p {
-    min-height: 60px;
+    padding: 1px;
+    margin-bottom: 5px;
 }
 
 img {
