--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -511,9 +511,13 @@ form label input {
 	font-size: 0.9rem;
 }
 
+#business-info p {
+	font-size: 0.7rem;
+}
+
 img {
-	height: 75px;
-	max-width: 100%;
+	height: 100px;
+	max-width: auto;
 }
 
 @media (min-width: 700px) {
