--- a/temple-inn-suites/css/small.css
+++ b/temple-inn-suites/css/small.css
@@ -116,6 +116,12 @@ nav ul li a:hover {
 	justify-content: center;
 }
 
+#banner {
+  text-align: center;
+  margin-top: -10px;
+  margin-bottom: 8px;
+}
+
 main {
   background-color: #C6DEC6;
   padding: 10px;
@@ -300,6 +306,10 @@ body {
 	font-size: 1.1rem;
 }
 
+#res-box fieldset label {
+  width: 95%;
+}
+
 .weather label {
 	text-align: right;
 }
@@ -337,6 +347,11 @@ form label input {
 	color: rgb(0, 0, 0);
 	width: 100%;
 	background-color: rgba(0,0,0,0.1);
+}
+
+#special {
+  margin-top: 5px;
+  width: 100%;
 }
 
 .down-footer p {
