--- a/temple-inn-suites/css/small.css
+++ b/temple-inn-suites/css/small.css
@@ -131,6 +131,13 @@ main {
   padding: 10px;
 }
 
+.home-main {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
 img {
   max-width: 100%;
   margin-top: 10px;
@@ -272,8 +279,8 @@ body {
 }
 
 .weather {
-  display: flex;
-  flex-direction: column;
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
 }
 
 #res-main {
@@ -360,6 +367,89 @@ form label input {
 
 #btnSubmit {
   margin-left: 30%;
+}
+
+#reserve-now {
+  display: block;
+  text-align: center;
+}
+
+#reserveBtn {
+  display: grid;
+  grid-column: 3 / 5;
+  grid-row: 1 / 3;
+  height: 100px; 
+  width: 700px; 
+  background: #42553f; 
+  color: #ffffff; 
+  text-align: center; 
+  font-weight: bold; 
+  font-size: 300%; 
+  line-height: 100px;
+  border-radius: 20px;
+  margin-top: 60px;
+}
+
+#receptionBtn {
+  display: grid;
+  grid-column: 3 / 5;
+  grid-row: 1 / 3;
+  height: 100px; 
+  width: 400px; 
+  background: #42553f; 
+  color: #ffffff; 
+  text-align: center; 
+  font-weight: bold; 
+  font-size: 300%; 
+  line-height: 100px;
+  border-radius: 20px;
+  margin-top: 60px;
+}
+
+#missionaryBtn {
+  display: grid;
+  grid-column: 3 / 5;
+  grid-row: 1 / 3;
+  height: 100px; 
+  width: 800px; 
+  background: #42553f; 
+  color: #ffffff; 
+  text-align: center; 
+  font-weight: bold; 
+  font-size: 300%; 
+  line-height: 100px;
+  border-radius: 20px;
+  margin-top: 60px;
+}
+
+#reserveBtn:hover {
+  background-color: #777;
+}
+
+#receptionBtn:hover {
+  background-color: #777;
+}
+
+#missionaryBtn:hover {
+  background-color: #777;
+}
+
+#contact-box {
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+#temple-info {
+  grid-column: 2 / 4;
+}
+
+.reception-heading {
+  text-align: center;
+}
+
+.reception-info {
+  text-align: center;
 }
 
 .down-footer p {
