--- a/temple-inn-suites/css/small.css
+++ b/temple-inn-suites/css/small.css
@@ -391,35 +391,27 @@ form label input {
 }
 
 #receptionBtn {
-  display: grid;
-  grid-column: 3 / 5;
-  grid-row: 1 / 3;
-  height: 100px; 
-  width: 400px; 
+  height: auto; 
+  width: 20%; 
   background: #42553f; 
   color: #ffffff; 
   text-align: center; 
   font-weight: bold; 
-  font-size: 300%; 
-  line-height: 100px;
+  font-size: 200%; 
+  line-height: 70px;
   border-radius: 20px;
-  margin-top: 60px;
 }
 
 #missionaryBtn {
-  display: grid;
-  grid-column: 3 / 5;
-  grid-row: 1 / 3;
-  height: 100px; 
-  width: 800px; 
+  height: auto; 
+  width: 40%; 
   background: #42553f; 
   color: #ffffff; 
   text-align: center; 
   font-weight: bold; 
-  font-size: 300%; 
-  line-height: 100px;
+  font-size: 200%; 
+  line-height: 70px;
   border-radius: 20px;
-  margin-top: 60px;
 }
 
 #reserveBtn:hover {
@@ -440,6 +432,16 @@ form label input {
   flex-direction: column;
 }
 
+#contact-info-missionary {
+  display: flex;
+  margin-left: 500px;
+  text-align: center;
+}
+
+#contact-info-p {
+  margin-top: -6px;
+}
+
 #temple-info {
   grid-column: 2 / 4;
 }
@@ -450,6 +452,140 @@ form label input {
 
 .reception-info {
   text-align: center;
+}
+
+.missionary-heading {
+  text-align: center;
+}
+
+.miss-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 1em;
+}
+
+.headline {
+  grid-column: 2/5;
+  grid-row: 1/2;
+  margin-top: -70px;
+  margin-bottom: 115px;
+  position: relative;
+  text-align: center;
+}
+
+.miss-headline-1 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+
+.miss-paragraph-1 {
+  grid-column: 1/4;
+  grid-row: 2/3;
+  margin-top: -10px;
+}
+
+.miss-right-img1 {
+  grid-column: 4/6;
+  grid-row: 1/3;
+  border: 0.5px solid #ccc;
+  padding: 10px;
+  box-shadow: 5px 5px 5px #999;
+  margin-top: 40px;
+  width: 350px;
+  height: auto;
+  margin-left: 100px;
+  margin-top: 80px;
+}
+
+.miss-headline-2 {
+  grid-column: 4/6;
+  grid-row: 3/4;
+  margin-top: 20px;
+}
+
+.miss-paragraph-2 {
+  grid-column: 3/6;
+  grid-row: 4/6;
+  margin-top: 0px;
+}
+
+.miss-left-img1 {
+  grid-column: 1/3;
+  grid-row: 3/6;
+  border: 0.5px solid #ccc;
+  padding: 10px;
+  box-shadow: 5px 5px 5px #999;
+  width: 350px;
+  height: auto;
+  margin-left: 40px;
+  margin-top: 90px;
+}
+
+.miss-headline-3 {
+  grid-column: 1/3;
+  grid-row: 5/6;
+  margin-top: 250px;
+}
+
+.miss-paragraph-3 {
+  grid-column: 1/4;
+  grid-row: 6/8;
+  margin-top: 0px;
+}
+
+.miss-right-img2 {
+  grid-column: 4/6;
+  grid-row: 6/7;
+  border: 0.5px solid #ccc;
+  padding: 10px;
+  box-shadow: 5px 5px 5px #999;
+  margin-top: -40px;
+  width: 350px;
+  height: auto;
+  margin-left: 40px;
+}
+
+.miss-headline-4 {
+  grid-column: 4/7;
+  grid-row: 7/8;
+}
+
+.miss-paragraph-4 {
+  grid-column: 3/7;
+  grid-row: 8/10;
+  margin-top: 0px;
+}
+
+.miss-left-img2 {
+  grid-column: 1/3;
+  grid-row: 7/9;
+  border: 0.5px solid #ccc;
+  padding: 10px;
+  box-shadow: 5px 5px 5px #999;
+  margin-top: 70px;
+  margin-left: 100px;
+  width: 350px;
+  height: auto;
+}
+
+.miss-headline-5 {
+  grid-column: 1/4;
+  grid-row: 9/10;
+  margin-top: 40px;
+}
+
+.miss-paragraph-5 {
+  grid-column: 1/4;
+  grid-row: 10/12;
+  margin-top: 0px;
+}
+
+.miss-right-img3 {
+  grid-column: 4/6;
+  border: 0.5px solid #ccc;
+  padding: 10px;
+  box-shadow: 5px 5px 5px #999;
+  margin-top: -40px;
 }
 
 .down-footer p {
