--- a/temple-inn-suites/css/small.css
+++ b/temple-inn-suites/css/small.css
@@ -181,18 +181,22 @@ body {
   border: 0.5px solid #ccc;
   padding: 10px;
   box-shadow: 5px 5px 5px #999;
-  margin-top: 40px;
+  margin-top: 250px;
+  margin-left: 70px;
+  width: 330px;
+  height: auto;
 }
 
 .home-headline-2 {
-  grid-column: 4/6;
+  grid-column: 3/6;
   grid-row: 3/4;
 }
 
 .home-paragraph-2 {
   grid-column: 3/6;
   grid-row: 4/6;
-  margin-top: 0px;
+  margin-top: -15px;
+  margin-bottom: 120px;
 }
 
 .home-left-img1 {
@@ -201,12 +205,15 @@ body {
   border: 0.5px solid #ccc;
   padding: 10px;
   box-shadow: 5px 5px 5px #999;
+  width: 330px;
+  height: auto;
+  margin-left: 80px;
+  margin-top: 260px;
 }
 
 .home-headline-3 {
-  grid-column: 1/3;
+  grid-column: 1/4;
   grid-row: 5/6;
-  margin-top: 130px;
 }
 
 .home-paragraph-3 {
@@ -221,18 +228,23 @@ body {
   border: 0.5px solid #ccc;
   padding: 10px;
   box-shadow: 5px 5px 5px #999;
-  margin-top: -50px;
+  margin-left: 60px;
+  margin-top: 120px;
+  width: 330px;
+  height: auto;
 }
 
 .home-headline-4 {
-  grid-column: 4/7;
+  grid-column: 3/7;
   grid-row: 7/8;
+  margin-top: 190px;
 }
 
 .home-paragraph-4 {
   grid-column: 3/7;
   grid-row: 8/10;
-  margin-top: 0px;
+  margin-top: -10px;
+  margin-bottom: -150px;
 }
 
 .home-left-img2 {
@@ -241,27 +253,10 @@ body {
   border: 0.5px solid #ccc;
   padding: 10px;
   box-shadow: 5px 5px 5px #999;
-  margin-top: 70px;
-}
-
-.home-headline-5 {
-  grid-column: 1/4;
-  grid-row: 9/10;
-  margin-top: 40px;
-}
-
-.home-paragraph-5 {
-  grid-column: 1/4;
-  grid-row: 10/12;
-  margin-top: 0px;
-}
-
-.home-right-img3 {
-  grid-column: 4/6;
-  border: 0.5px solid #ccc;
-  padding: 10px;
-  box-shadow: 5px 5px 5px #999;
-  margin-top: -40px;
+  margin-top: 340px;
+  margin-left: 70px;
+  width: 330px;
+  height: auto;
 }
 
 @media screen and (max-width: 550px) {
@@ -401,6 +396,8 @@ form label input {
   line-height: 70px;
   border-radius: 20px;
   float: left;
+  margin-left: 250px;
+  margin-right: 100px;
 }
 
 #missionaryBtn {
@@ -413,6 +410,11 @@ form label input {
   font-size: 200%; 
   line-height: 70px;
   border-radius: 20px;
+  margin-bottom: 20px;
+}
+
+#services-info {
+  margin-bottom: 50px;
 }
 
 #reserveBtn:hover {
