--- a/temple-inn-suites/css/small.css
+++ b/temple-inn-suites/css/small.css
@@ -477,7 +477,7 @@ form label input {
 }
 
 .miss-headline-1 {
-  grid-column: 1/3;
+  grid-column: 1/4;
   grid-row: 1/2;
 }
 
@@ -485,6 +485,7 @@ form label input {
   grid-column: 1/4;
   grid-row: 2/3;
   margin-top: -10px;
+  font-size: 1.3rem;
 }
 
 .miss-right-img1 {
@@ -501,7 +502,7 @@ form label input {
 }
 
 .miss-headline-2 {
-  grid-column: 4/6;
+  grid-column: 3/6;
   grid-row: 3/4;
   margin-top: 20px;
 }
@@ -510,6 +511,7 @@ form label input {
   grid-column: 3/6;
   grid-row: 4/6;
   margin-top: 0px;
+  font-size: 1.3rem;
 }
 
 .miss-left-img1 {
@@ -525,7 +527,7 @@ form label input {
 }
 
 .miss-headline-3 {
-  grid-column: 1/3;
+  grid-column: 1/4;
   grid-row: 5/6;
   margin-top: 250px;
 }
@@ -534,6 +536,7 @@ form label input {
   grid-column: 1/4;
   grid-row: 6/8;
   margin-top: 0px;
+  font-size: 1.3rem;
 }
 
 .miss-right-img2 {
@@ -549,7 +552,7 @@ form label input {
 }
 
 .miss-headline-4 {
-  grid-column: 4/7;
+  grid-column: 3/7;
   grid-row: 7/8;
 }
 
@@ -557,6 +560,7 @@ form label input {
   grid-column: 3/7;
   grid-row: 8/10;
   margin-top: 0px;
+  font-size: 1.3rem;
 }
 
 .miss-left-img2 {
@@ -569,26 +573,6 @@ form label input {
   margin-left: 100px;
   width: 350px;
   height: auto;
-}
-
-.miss-headline-5 {
-  grid-column: 1/4;
-  grid-row: 9/10;
-  margin-top: 40px;
-}
-
-.miss-paragraph-5 {
-  grid-column: 1/4;
-  grid-row: 10/12;
-  margin-top: 0px;
-}
-
-.miss-right-img3 {
-  grid-column: 4/6;
-  border: 0.5px solid #ccc;
-  padding: 10px;
-  box-shadow: 5px 5px 5px #999;
-  margin-top: -40px;
 }
 
 .down-footer p {
