--- a/temple-inn-suites/css/small.css
+++ b/temple-inn-suites/css/small.css
@@ -453,8 +453,8 @@ form label input {
   text-align: center;
 }
 
-.reception-info {
-  text-align: center;
+#reception-info {
+  font-size: 1.5rem;
 }
 
 .missionary-heading {
